--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://username1103.github.io/'
+baseURL = 'https://myeongil.seorapjang.com'
 languageCode = 'ko-kr'
 title = 'Myeongil'
 theme = 'PaperMod'
